Lessened the width on mobile list item info details. Fixes SPOT-595.

--- a/static/css/mobile.less
+++ b/static/css/mobile.less
@@ -369,7 +369,7 @@ select {
         #info_items {
             ol {
                 li {
-                    .space-detail-list-item { width: 57%; }
+                    .space-detail-list-item { width: 53%; }
                 }
             }
         }
@@ -396,7 +396,7 @@ select {
         #info_items {
             ol {
                 li {
-                    .space-detail-list-item { width: 73%; }
+                    .space-detail-list-item { width: 70%; }
                 }
             }
         }
